--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ serde_json = "1.0.105"
 tokio = { version = "1.32.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.4.3", features = ["full"] }
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
