--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,14 @@ readme = "README.md"
 anyhow = "1.0.82"
 axum = { version = "0.6.20", features = ["macros"] }
 clap = { version = "4.4.1", features = ["derive"] }
+clap-verbosity-flag = "2.2.2"
 env_logger = "0.10.0"
 log = "0.4.20"
 mpvipc-async = { git = "https://git.pvv.ntnu.no/oysteikt/mpvipc-async.git", rev = "v0.1.0" }
+sd-notify = "0.4.3"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
+systemd-journal-logger = "2.2.0"
 tempfile = "3.11.0"
 tokio = { version = "1.32.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
