--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ axum = { version = "0.7.7", features = ["macros"] }
 clap = { version = "4.4.1", features = ["derive"] }
 clap-verbosity-flag = "2.2.2"
 env_logger = "0.10.0"
+futures = "0.3.31"
 log = "0.4.20"
 mpvipc-async = { git = "https://git.pvv.ntnu.no/Projects/mpvipc-async.git", rev = "v0.1.0" }
 sd-notify = "0.4.3"
