--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1.5.4"
+lazy_static = "1.4.0"
 url = "2.2.2"
 swayipc = "3.0"
 anyhow = "1.0.82"
