--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tempfile = "3.11.0"
 tokio = { version = "1.32.0", features = ["full"] }
 tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
+tungstenite = "0.26.2"
 utoipa = { version = "5.1.3", features = ["axum_extras"] }
 utoipa-axum = "0.2.0"
 utoipa-swagger-ui = { version = "9.0.1", features = ["axum", "vendored"] }
