--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,15 @@ name = "greg-ng"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0"
-authors = ["oysteikt@pvv.ntnu.no"]
+authors = ["projects@pvv.ntnu.no"]
 readme = "README.md"
+homepage = "https://git.pvv.ntnu.no/Grzegorz"
+repository = "https://git.pvv.ntnu.no/Grzegorz/greg-ng"
+description = "A shared music player system, utilizing mpv"
+categories = ["multimedia"]
+keywords = ["mpv", "music-player"]
+autobins = false
+autolib = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -34,3 +41,8 @@ utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
 strip = true
 lto = true
 codegen-units = 1
+
+[[bin]]
+name = "greg-ng"
+bench = false
+path = "src/main.rs"
